src/objects/TestProjectMst__c.object
<CustomObject>
    <customHelpPage>TestProjectPage</customHelpPage>
    <description>プロジェクトマスタ</description>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>プロジェクトの終了日付を入力します</description>
        <label>終了日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InitialKey__c</fullName>
        <externalId>true</externalId>
        <label>外部キーテスト</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>プロジェクトの責任者を選択します。</description>
        <label>責任者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ManagerRelation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>プロジェクトの開始日を入力します。</description>
        <label>開始日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>プロジェクトの進行状況を選択します。</description>
        <label>進捗状況</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>開始前</fullName>
                    <default>true</default>
                    <label>開始前</label>
                </value>
                <value>
                    <fullName>進行中</fullName>
                </value>
                <value>
                    <fullName>終了済</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TestProjectName__c</fullName>
        <description>プロジェクトの名前</description>
        <inlineHelpText>最大255文字です。</inlineHelpText>
        <label>テストプロジェクト名</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qertetr__c</fullName>
        <label>qertetr</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>テストプロジェクト</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>GroupMail_TestProjectMst</fullName>
        <filterScope>Queue</filterScope>
        <label>メールテスト</label>
        <queue>GroupMail</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>テストプロジェクトＩＤ</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>